kubernetes/external-applications/pve2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pve2
  namespace: external-applications
spec:
  type: ExternalName
  ports:
  - name: proxmox
    port: 8006
  externalName: 10.0.0.6
