kubernetes/external-applications/pve2/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pve2
  namespace: external-applications
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve2.local.syspawn.com`)
      kind: Rule
      services:
        - name: pve2
          port: 8006
          scheme: https
  tls:
    secretName: local-syspawn-com-tls
